# adrs

./: .adr-dir  .dockerignore  .gitattributes  .gitignore  .mcp.json.example  .pre-commit-config.yaml  .pre-commit-hooks.yaml  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  RELEASING.md  USER_ISSUE_VALIDATION.md  adrs.html  audit.toml  caveats.html  cliff.toml  codecov.yml  compatibility.html  configuration.html  contributing.html  deny.toml  dist-workspace.toml  formats.html  index.html  installation.html  justfile  library.html  license.html  mcp.html  print.html  release-plz.toml  resources.html  searcher-c2a407aa.js  searchindex-67d8db84.js  searchindex.js  (+5 more)
.config/: Brewfile  nextest.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: audit.yml  book.yml  ci.yml  docker.yml  release-plz.yml  release.yml  rust.yml
book/: book.toml
book/src/: README.md  SUMMARY.md  adrs.md  caveats.md  compatibility.md  configuration.md  contributing.md  formats.md  installation.md  library.md  mcp.md  resources.md  templates.md
book/src/commands/: README.md  cheatsheet.md  completions.md  config.md  doctor.md  edit.md  export.md  generate.md  init.md  link.md  list.md  new.md  search.md  status.md  template.md
commands/: cheatsheet.html  completions.html  config.html  doctor.html  edit.html  export.html  generate.html  import.html  index.html  init.html  link.html  list.html  new.html  search.html  status.html  template.html
crates/: justfile
crates/adrs/: CHANGELOG.md  Cargo.toml  justfile
crates/adrs-core/: CHANGELOG.md  Cargo.toml  justfile
crates/adrs-core/examples/: create_and_list.rs  export_json.rs  link_adrs.rs  lint_repository.rs
crates/adrs-core/proptest-regressions/: types.txt
crates/adrs-core/src/: config.rs  doctest_helpers.rs  doctor.rs  error.rs  export.rs  init_adr.rs  lib.rs  lint.rs  parse.rs  repository.rs  template.rs  types.rs
crates/adrs-core/src/config/: mod.rs  providers.rs  xdg.rs
crates/adrs-core/tests/: adr_corpus.rs  adr_tools_compat.rs  edge_cases.rs  real_world_corpus.rs  write_path_classes.rs
crates/adrs-core/tests/fixtures/adr-corpus/: 0001-record-architecture-decisions.md  0004-use-madr-format.md  0006-deprecated-xml-api.md  0007-authentication-mechanism.md  0008-fenced-heading-examples.md  0009-no-trailing-newline.md  0010-non-canonical-status.md  0011-people-yaml-block-scalar.md  0012-people-yaml-zero-indent.md  0013-people-yaml-comment-between.md  0014-people-yaml-four-space.md  0015-nested-fence-backticks.md  0016-tilde-fence-wrapping-backticks.md  README.md
crates/adrs/src/: main.rs  mcp.rs  output.rs
crates/adrs/src/commands/: config.rs  doctor.rs  edit.rs  export.rs  generate.rs  import.rs  init.rs  link.rs  lint.rs  list.rs  mod.rs  new.rs  search.rs  status.rs  template.rs
crates/adrs/tests/: cli.rs  scenarios.rs
doc/adr/: 0001-record-architecture-decisions.md  0002-record-architecture-decisions.md  0003-record-architecture-decisions.md  0003-use-mdbook-for-documentation.md  0005-dual-mode-compatible-and-nextgen.md  0008-use-tower-mcp-for-mcp-server.md  0009-surgical-body-section-updates.md
docs/: .mdbook-lint.toml  book.toml  justfile
docs/src/: README.md  SUMMARY.md  changelog.md  frontmatter.md  glossary.md  license.md  mcp.md  roadmap.md
docs/src/adrs/: 0004-library-first-architecture.md  0007-use-minijinja-for-templates.md  README.md
docs/src/ai/: README.md
docs/src/ai/hooks/: README.md
docs/src/ai/rules/: README.md
docs/src/ai/skills/: README.md
docs/src/commands/: link.md  new.md  template.md
docs/src/developers/: README.md  code-of-conduct.md
docs/src/developers/cli/: README.md
docs/src/developers/introduction/: README.md  concepts.md
docs/src/developers/lib/: README.md  configuration.md  errors.md  import-export.md  linting.md  templates.md
docs/src/developers/mcp/: README.md
docs/src/developers/requirements/: README.md
docs/src/developers/testing/: README.md  fixtures.md  goals.md
docs/src/modes/: README.md  compatible.md  nextgen.md
docs/src/reference/: README.md  glossary.md
docs/src/reference/adrs/: 0002-rewrite-it-in-rust.md  0003-use-mdbook-for-documentation.md  0006-yaml-frontmatter-for-metadata.md  0008-linting-with-mdbook-lint.md  0009-json-adr-export-format.md  0010-error-handling-strategy.md  0011-mcp-server-integration.md  0012-mcp-server-library-selection.md  0013-adopt-figment-for-configuration.md  0014-justfile-conventions.md  0015-visual-snapshot-testing.md  0016-justfile-module-organization.md  0017-justfile-global-settings.md  0018-justfile-recipe-conventions.md  0019-justfile-argument-attributes.md  0020-config-priority.md  0021-testing-strategy.md  0022-error-handling-policy.md  0023-documentation-conventions.md  README.md
docs/src/reference/templates/: README.md  madr.md  nygard.md  variants.md
docs/src/requirements/project/: README.md  functional.md  non-functional.md
docs/src/resources/: README.md
docs/src/templates/: README.md  madr.md  nygard.md
docs/src/users/: README.md  configuration.md  frontmatter.md  installation.md
docs/src/users/commands/: config.md  doctor.md  generate.md  import.md  list.md  new.md  status.md  template.md
quality/: justfile
schema/: justfile
schema/json-adr/: v1.json
src/: adr.rs  cli.rs  cmd.rs  error.rs  init.rs  lib.rs  main.rs  new.rs
src/adrs/: lib.rs
src/cmd/: config.rs  edit.rs  generate.rs  init.rs  link.rs  list.rs  new.rs
src/cmd/generate/: book.rs  graph.rs  mod.rs  toc.rs
src/commands/: init.rs  mod.rs  new.rs
src/templates/: adr-nygard-init.hbs  adr-nygard.hbs
templates/: nygard.md
templates/book/: SUMMARY.md  book.toml
templates/nygard/: init.md  new.md
tests/: adr_tests.rs  justfile  test_adr_tools.rs  test_config.rs  test_edit.rs  test_generate.rs  test_init.rs  test_link.rs  test_list.rs  test_new.rs
tests/fixtures/adr-corpus/: 0002-use-postgresql-for-persistence.md  0003-use-rust-for-backend.md  0005-api-versioning-strategy.md  README.md
tests/visual/help/: default.txt
(+32 files in other folders)
