[package]
authors = ["josh rotenberg <joshrotenberg@gmail.com>"]
description = "Architectural Decision Record command line tool"
documentation = "https://docs.rs/adrs"
edition = "2021"
homepage = "https://github.com/joshrotenberg/adrs"
license = "MIT/Apache-2.0"
name = "adrs"
readme = "README.md"
repository = "https://github.com/joshrotenberg/adrs.git"
version = "0.2.0"

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
tinytemplate = "1.1"
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3.34", features = ["local-offset", "formatting", "macros"] }
edit = "0.1.5"
pulldown-cmark = "0.9"
pulldown-cmark-to-cmark = "11.2.0"
walkdir = "2.4.0"
fuzzy-matcher = "0.3.7"

[dev-dependencies]
serial_test = "3.0.0"
assert_cmd = "2.0.14"
assert_fs = "1.1.1"
