[package]
version = "0.2.9"
authors = ["josh rotenberg <joshrotenberg@gmail.com>"]
description = "Architectural Decision Record command line tool"
documentation = "https://github.com/joshrotenberg/adrs"
edition = "2021"
homepage = "https://github.com/joshrotenberg/adrs"
license = "MIT/Apache-2.0"
name = "adrs"
readme = "README.md"
repository = "https://github.com/joshrotenberg/adrs.git"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.1", features = ["derive", "env", "string"] }
handlebars = "6.3"
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3", features = ["local-offset", "formatting", "macros"] }
edit = "0.1.5"
pulldown-cmark = "0.9"
pulldown-cmark-to-cmark = "11.2.0"
walkdir = "2.5"
fuzzy-matcher = "0.3.7"
whoami = "1.5.1"
regex = "1.11"

[dev-dependencies]
serial_test = "3.2"
assert_cmd = "2.0"
assert_fs = "1.1"
predicates = "3.1"
