[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.6.0"
authors = ["josh rotenberg <joshrotenberg@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshrotenberg/adrs"
homepage = "https://github.com/joshrotenberg/adrs"
documentation = "https://github.com/joshrotenberg/adrs"

[workspace.dependencies]
# Core
thiserror = "2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.8"

# Markdown
pulldown-cmark = "0.12"
pulldown-cmark-to-cmark = "17"

# Templates
minijinja = { version = "2", features = ["loader"] }

# File system
walkdir = "2.5"

# Date/time
time = { version = "0.3", features = ["local-offset", "formatting", "macros", "serde", "parsing"] }

# Utilities
fuzzy-matcher = "0.3"
regex = "1"

# CLI only
anyhow = "1"
clap = { version = "4", features = ["derive", "env", "string"] }
clap_complete = "4"
edit = "0.1"
whoami = "1"

# MCP server (optional feature)
tower-mcp = { version = "0.1", features = ["http"] }
schemars = "1"
tokio = { version = "1", features = ["full"] }

# Internal
adrs-core = { path = "crates/adrs-core", version = "0.6.0" }

# Testing
serial_test = "3"
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
tempfile = "3"
proptest = "1"
test-case = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
