[package]
name = "adrs-core"
description = "Core library for managing Architecture Decision Records"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json = "1"
serde_yaml.workspace = true
toml.workspace = true
figment.workspace = true
gix-config.workspace = true
bstr.workspace = true
dirs.workspace = true
tracing.workspace = true
pulldown-cmark.workspace = true
pulldown-cmark-to-cmark.workspace = true
minijinja.workspace = true
walkdir.workspace = true
time.workspace = true
fuzzy-matcher.workspace = true
regex.workspace = true
tempfile.workspace = true  # For doctest_helpers

# Linting (mdbook-lint integration)
mdbook-lint-core = "0.14.3"
mdbook-lint-rulesets = { version = "0.14.3", default-features = false, features = ["adr"] }

[dev-dependencies]
proptest.workspace = true
test-case.workspace = true

[package.metadata.cargo-machete]
# TODO: Remove if actually unused, or document why it's needed
ignored = ["pulldown-cmark-to-cmark"]
