[package]
name = "adrs-core"
description = "Core library for managing Architecture Decision Records"
version.workspace = true
authors.workspace = true
edition.workspace = true
# Library MSRV: edition 2024 (1.85) + let-chains (1.88). Verified in CI.
rust-version = "1.88"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/adrs-core"
readme = "../../README.md"
keywords = ["adr", "architecture", "decision-records", "madr", "library"]
categories = ["development-tools"]

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json = "1"
serde_yaml.workspace = true
toml.workspace = true
pulldown-cmark.workspace = true
minijinja.workspace = true
walkdir.workspace = true
time.workspace = true
fuzzy-matcher.workspace = true
regex.workspace = true

# Linting (mdbook-lint integration)
mdbook-lint-core = "0.14.3"
mdbook-lint-rulesets = { version = "0.14.3", default-features = false, features = ["adr"] }

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
test-case.workspace = true
