[package]
name = "adrs"
description = "Command line tool for managing Architecture Decision Records"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"

[[bin]]
name = "adrs"
path = "src/main.rs"

[features]
default = []
mcp = ["rmcp", "schemars", "tokio"]

[dependencies]
adrs-core.workspace = true
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
edit.workspace = true
serde = { workspace = true }
serde_json = "1"
time.workspace = true
whoami.workspace = true

# MCP server (optional)
rmcp = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
serial_test.workspace = true
assert_cmd.workspace = true
assert_fs.workspace = true
predicates.workspace = true
tempfile.workspace = true
