[package]
name = "adrs"
description = "Command line tool for managing Architecture Decision Records"
version.workspace = true
authors.workspace = true
edition.workspace = true
# CLI MSRV: higher than the library because tower-mcp (default `mcp` feature)
# requires rustc 1.90. Verified in CI.
rust-version = "1.90"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://joshrotenberg.com/adrs/"
readme = "../../README.md"
keywords = ["adr", "architecture", "decision-records", "madr", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "adrs"
path = "src/main.rs"

[features]
default = ["mcp"]
mcp = ["dep:tower-mcp", "dep:schemars", "dep:tokio"]
mcp-http = ["mcp", "tower-mcp/http"]

[dependencies]
adrs-core.workspace = true
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
edit.workspace = true
serde = { workspace = true }
serde_json = "1"
time.workspace = true
whoami.workspace = true

# MCP server (optional)
tower-mcp = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
serial_test.workspace = true
assert_cmd.workspace = true
assert_fs.workspace = true
predicates.workspace = true
tempfile.workspace = true
